# C--final

./: .gitignore  Background CPP File  CMakeLists.txt  Color, Gravity, Friction, Speed Four Bottums CPP File  Color, Gravity, Friction, Speed Four Bottums Head File  EASYX_ENVIRONMENT.md  LICENSE  README.md  Three Bottums  Three bottums including start, pause and stop head file  Untitled-1.cpp  build_and_run.bat  compile_demo.bat  run_friction_test.ps1  run_platform_friction_test.bat  test by fzr  test001.cpp  test002.cpp
docs/: API.md  BOUNDARY_BUG_FIX.md  BRIDGE_IMPLEMENTATION_LOG.md  COMPLETE_VERIFICATION_REPORT.md  DEBUG_AND_USAGE_LOG_20251207.md  FRICTION_REFACTORING.md  FRICTION_TEST_REPORT.md  IMPLEMENTATION_SUMMARY.md  NORMAL_FORCE_FIX_COMPLETE.md  NORMAL_FORCE_ISSUE_ANALYSIS.md  NORMAL_FORCE_STACKING_FIX.md  PHYSICS_ENGINE_README.md  PROJECTILE_MOTION_SUMMARY.md  README.md  RELATIVE_FRICTION_UPDATE.md  SCENE_MANAGER_GUIDE.md  SLOPE_COLLISION_SUMMARY.md  SLOPE_TEST_SUMMARY.md  TIMESTEP_CONTROL.md  TIMESTEP_USAGE_ISSUE.md  VCPKG_INTEGRATION.md  VERIFICATION_SUMMARY.md  WALL_COLLISION_TEST_REPORT.md  WHY_POSITION_ERROR_LARGER.md  final_verification_report.md  friction_fix_detailed.md  friction_fix_summary.md  friction_implementation.md  implementation_guide_ui_physics_bridge.md  placeShapeOnShape_guide.md  placeShapeOnShape_implementation_summary.md  placeShapeOnShape_quick_ref.md  placeShapeOnShape_regression_test.md  proj-prob;em-1206.txt  project_status_summary_1206.md  projectile_motion_test_report.md  relative_velocity_friction.md  slope_collision_test_report.md  stacking_problem_root_cause.md  test_diagnosis_report.md  (+1 more)
examples/: rotated_aabb_example.cpp  rotated_world_example.cpp  slope_placement_example.cpp  tilted_world_example.cpp
include/: PhysicsRenderBridge.h  Renderer.h  adapter.h  allbottums.h  allbuttons.h  background1.h  background_integrated.h  color, gravity, friction, speed.h  fourBottums1.h  fourBottums2.h  menu.h  music.h  music_player.h  physicalWorld.h  renderer.h  shapes.h  threebottums.h
scripts/: compile_and_run_friction_test.bat  compile_full.bat  run_all_tests.bat  run_block_models_test.bat  run_projectile_test.bat  run_slope_collision_test.bat  run_tests.bat  test_summary.bat
src/: PhysicsRenderBridge.cpp  Renderer.cpp  Renderer.h  adapter.cpp  additional_buttons.cpp  choose.cpp  color, gravity, friction, speed.cpp  control_buttons.cpp  fourBottums1.cpp  fourBottums2.cpp  fourbuttons2_fixed.cpp  main.cpp  main_console_demo.cpp  main_graphical.cpp  main_lisp  menu.cpp  music.cpp  music_fixed.cpp  music_player.cpp  physicalWorld.cpp  physicalWorld.cpp.broken  shapes.cpp  shapes.cpp.backup  spacebottum.cpp  threebottums.cpp
tests/: COMPREHENSIVE_COLLISION_TEST_REPORT.md  README_COLLISION_TEST.md  README_COMPREHENSIVE_COLLISION_TEST.md  README_FRICTION_SLIDING.md  RUN_FRICTION_TEST.md  output_acceleration_analysis.txt  output_block_models.txt  output_friction_comprehensive.txt  output_horizontal_friction.txt  output_incline_sliding.txt  output_physicalWorld.txt  output_platform_friction.txt  output_projectile_motion.txt  output_quick_test.txt  output_simple_horizontal.txt  quick_test.cpp  (+41 more)
tests/CSC3002_groupproject1.1_fail/: CMakeLists.txt
tests/CSC3002_groupproject1.1_fail/include/: allbuttons.h
tests/CSC3002_groupproject1.1_fail/src/: fourbuttons2_fixed.cpp
tests/GroupProject_ImportantPartOfProgramme_PastVersion_lisp/CSC3002_groupproject1.6_halfsucceed/: CMakeLists.txt
tests/GroupProject_ImportantPartOfProgramme_PastVersion_lisp/CSC3002_groupproject1.6_halfsucceed/include/: Renderer.h  adapter.h  allbottums.h
tests/GroupProject_ImportantPartOfProgramme_PastVersion_lisp/CSC3002_groupproject1.6_halfsucceed/src/: adapter.cpp  fourBottums1.cpp  spacebottum.cpp
(+100 files in other folders)
